k8s/backend/middleware.yml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: redirect-backend-https
  namespace: backend
spec:
  redirectScheme:
    scheme: https
    permanent: true
